@@ -11,6 +11,7 @@ import org.elasticsearch.compute.operator.DriverContext;
 import org.elasticsearch.compute.operator.WarningSourceLocation;
 import org.elasticsearch.compute.operator.Warnings;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -68,17 +69,17 @@ public class UriPartsFunctionBridgeTests extends AbstractCompoundOutputEvaluator
     public void testFullOutput() {
         List<String> requestedFields = List.of(SCHEME, DOMAIN, PORT, PATH, EXTENSION, QUERY, FRAGMENT, USER_INFO, USERNAME, PASSWORD);
         List<String> input = List.of("http://user:pass@example.com:8080/path/to/file.html?query=val#fragment");
-        List<Object[]> expected = List.of(
-            new Object[] { "http" },
-            new Object[] { "example.com" },
-            new Object[] { 8080 },
-            new Object[] { "/path/to/file.html" },
-            new Object[] { "html" },
-            new Object[] { "query=val" },
-            new Object[] { "fragment" },
-            new Object[] { "user:pass" },
-            new Object[] { "user" },
-            new Object[] { "pass" }
+        List<?> expected = List.of(
+            "http",
+            "example.com",
+            8080,
+            "/path/to/file.html",
+            "html",
+            "query=val",
+            "fragment",
+            "user:pass",
+            "user",
+            "pass"
         );
         evaluateAndCompare(input, requestedFields, expected);
     }
@@ -101,40 +102,35 @@ public class UriPartsFunctionBridgeTests extends AbstractCompoundOutputEvaluator
     public void testPartialFieldsRequested() {
         List<String> requestedFields = List.of(DOMAIN, PORT);
         List<String> input = List.of("http://user:pass@example.com:8080/path/to/file.html?query=val#fragment");
-        List<Object[]> expected = List.of(new Object[] { "example.com" }, new Object[] { 8080 });
+        List<?> expected = List.of("example.com", 8080);
         evaluateAndCompare(input, requestedFields, expected);
     }
 
     public void testMissingPortAndUserInfo() {
         List<String> requestedFields = List.of(SCHEME, DOMAIN, PORT, USERNAME);
         List<String> input = List.of("https://elastic.co/downloads");
-        List<Object[]> expected = List.of(
-            new Object[] { "https" },
-            new Object[] { "elastic.co" },
-            new Object[] { null },
-            new Object[] { null }
-        );
+        List<?> expected = Arrays.asList("https", "elastic.co", null, null);
         evaluateAndCompare(input, requestedFields, expected);
     }
 
     public void testMissingExtension() {
         List<String> requestedFields = List.of(PATH, EXTENSION);
         List<String> input = List.of("https://elastic.co/downloads");
-        List<Object[]> expected = List.of(new Object[] { "/downloads" }, new Object[] { null });
+        List<?> expected = Arrays.asList("/downloads", null);
         evaluateAndCompare(input, requestedFields, expected);
     }
 
     public void testAllMissingFields() {
         List<String> requestedFields = List.of(FRAGMENT, QUERY, USER_INFO);
         List<String> input = List.of("https://elastic.co/downloads");
-        List<Object[]> expected = List.of(new Object[] { null }, new Object[] { null }, new Object[] { null });
+        List<?> expected = Arrays.asList(null, null, null);
         evaluateAndCompare(input, requestedFields, expected);
     }
 
     public void testInvalidInput() {
         List<String> requestedFields = List.of(DOMAIN, PORT);
         List<String> input = List.of("not a valid url");
-        List<Object[]> expected = List.of(new Object[] { null }, new Object[] { null });
+        List<?> expected = Arrays.asList(null, null);
         evaluateAndCompare(input, requestedFields, expected, WARNINGS);
         assertCriticalWarnings(
             "Line 1:2: evaluation of [invalid_input] failed, treating result as null. Only first 20 failures recorded.",
